# DimensionA_Bot

./: data.py  helper.py  kecnotice.py  keepalive.py  main.py  pyproject.toml  readme.md  sqlprocess.py
game2048/: game2048.py
static/css/: bootstrap.css  mobile.css
templates/: badindex.html  bootstrap.css  index.html  lucky.html  mobile.css  soundboard.html
